.werft/jobs/build/payment/payment-endpoint-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitpod
    component: payment-endpoint
  name: payment-endpoint
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitpod
      component: payment-endpoint
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gitpod
        component: payment-endpoint
      name: payment-endpoint
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: gitpod.io/workload_meta
                  operator: Exists
      containers:
      - env:
        - name: KUBE_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: GITPOD_REGION
          value: local
        - name: GITPOD_INSTALLATION_SHORTNAME
          value: ""
        - name: DB_HOST
          value: mysql
        - name: DB_PORT
          value: "3306"
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: mysql
        - name: DB_USERNAME
          valueFrom:
            secretKeyRef:
              key: username
              name: mysql
        - name: DB_ENCRYPTION_KEYS
          valueFrom:
            secretKeyRef:
              key: encryptionKeys
              name: mysql
        - name: DB_DELETED_ENTRIES_GC_ENABLED
          value: "false"
        - name: CHARGEBEE_WEBHOOK
          value: '{"id":"whv2_Hr55137RIX0bgV1e96","password":"0\"cR4M,;nV=$m9izAHEah","user":"chargebee"}'
        - name: GITPOD_GITHUB_APP_ENABLED
          value: "false"
        # - name: GITPOD_GITHUB_APP_ID
        #   value: "23613"
        # - name: GITPOD_GITHUB_APP_WEBHOOK_SECRET
        #   value: ea3t2QvbJqUFhGqrAJxCQQJ4mmABru
        # - name: GITPOD_GITHUB_APP_AUTH_PROVIDER_ID
        #   value: Public-GitHub
        # - name: GITPOD_GITHUB_APP_CERT_PATH
        #   value: /github-app-cert/cert
        # - name: GITPOD_GITHUB_APP_MKT_NAME
        #   value: gitpod-staging
        - name: JAEGER_ENDPOINT
          value: http://otel-collector.cluster-monitoring.svc:14268/api/traces
        - name: JAEGER_SAMPLER_PARAM
          value: "5.0"
        - name: JAEGER_SAMPLER_TYPE
          value: ratelimiting
        - name: LOG_LEVEL
          value: info
        image: eu.gcr.io/gitpod-core-dev/build/payment-endpoint:${PAYMENT_ENDPOINT_VERSION}
        name: main
        ports:
        - containerPort: 3002
          name: http
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
        securityContext:
          privileged: false
        volumeMounts:
        # - mountPath: /github-app-cert
        #   name: github-app-cert-secret
        #   readOnly: true
        - mountPath: /chargebee
          name: chargebee-config
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext:
        runAsUser: 31006
      serviceAccountName: payment-endpoint
      terminationGracePeriodSeconds: 30
      volumes:
      # - name: github-app-cert-secret
      #   secret:
      #     secretName: github-app-cert
      - name: chargebee-config
        secret:
          secretName: chargebee-config
