.werft/jobs/build/payment/payment-endpoint-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitpod
    component: payment-endpoint
  name: payment-endpoint
  namespace: ${NAMESPACE}
spec:
  ports:
  - name: http
    port: 3002
    protocol: TCP
    targetPort: 3002
  selector:
    app: gitpod
    component: payment-endpoint
  type: ClusterIP
