.werft/jobs/build/payment/payment-endpoint-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payment-endpoint-deny-all-allow-explicit
  namespace: ${NAMESPACE}
  labels:
    app: gitpod
    component: payment-endpoint
spec:
  podSelector:
    matchLabels:
      app: gitpod
      component: payment-endpoint
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 3002
    from:
    # Allow ingress on port 3002 from component:
    - podSelector:
        matchLabels:
          app: gitpod
          component: proxy
